<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="206dp" />


    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_personalizado">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sub_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_subtitle"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/ll" />

    <TextView
        android:id="@+id/tv_valor_conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/type_table_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_titulo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_valor_conta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor_conta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_valor_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="R$: 100,00"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_num_pessoas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/type_num_people"
        app:layout_constraintTop_toBottomOf="@+id/til_valor_conta" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_num_pessoas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_num_pessoas">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_num_pessoas"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:layout_height="wrap_content"
            android:hint="EX: 3"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/porcentagem_gorjeta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/type_percent"
        app:layout_constraintTop_toBottomOf="@+id/til_num_pessoas" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_porcentagem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/porcentagem_gorjeta">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_porcentagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="10%"
            android:inputType="number"
            android:maxLength="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/ic_percent"
        app:layout_constraintBottom_toTopOf="@+id/btn_limpar"
        app:layout_constraintTop_toBottomOf="@+id/til_porcentagem" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline" />

    <Button
        android:id="@+id/btn_limpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_clean"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>