<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultadoActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/bg_personalizado">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:text="@string/app_result"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_sub_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/result_subtitle"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="R$: 200,00"
        android:gravity="center"
        android:textColor="@color/green"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sub_titulo" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_resultado" />

    <TextView
        android:id="@+id/tv_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_table"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/separator" />

    <TextView
        android:id="@+id/tv_valor_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        tools:text="R$ 250,00" />

    <TextView
        android:id="@+id/pessoas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/num_people"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor" />

    <TextView
        android:id="@+id/tv_num_pessoas_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_valor_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_valor_2"
        tools:text="3" />

    <TextView
        android:id="@+id/tv_porcentagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/percent"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/pessoas" />

    <TextView
        android:id="@+id/tv_porcentagem_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_num_pessoas_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_num_pessoas_2"
        tools:text="10%" />

    <Button
        android:id="@+id/btn_atualizar"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:layout_margin="16dp"
        android:text="@string/btn_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>